// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders when disabled 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium ax-input__icon-container--disabled"
    >
      <input
        className="ax-input"
        disabled={true}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders when invalid 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium ax-input__icon-container--invalid"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders when valid 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium ax-input__icon-container--valid"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with TextInputButton 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ax-input__button"
    >
      <button
        className="ax-button ax-button--accent ax-button--primary ax-button--rectangle-medium ax-button--joined-left"
        disabled={undefined}
      >
        Test
      </button>
    </span>
  </div>
</label>
`;

exports[`TextInput renders with TextInputIcon 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <span
        className="ax-input__icon ax-input__icon--align-right"
      >
        <svg
          className="ax-icon ax-icon--twitter"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M0 13.526a6.586 6.586 0 0 0 4.86-1.36 3.285 3.285 0 0 1-3.067-2.28c.201.04.407.06.618.06.3 0 .693-.04.968-.115C1.878 9.529.85 8.203.85 6.613c0 .204.846.352 1.384.369C1.352 6.394.721 5.389.721 4.25c0-.601.136-1.166.418-1.65a9.29 9.29 0 0 0 6.754 3.429 3.287 3.287 0 0 1-.092-.747 3.28 3.28 0 0 1 5.674-2.246 6.554 6.554 0 0 0 2.084-.797 3.298 3.298 0 0 1-1.444 1.817A6.56 6.56 0 0 0 16 3.538a6.673 6.673 0 0 1-1.638 1.7c.007.14.01.281.01.424C14.371 10 11.07 15 5.031 15A9.301 9.301 0 0 1 0 13.526z\\" fill=\\"#1DA1F2\\" fill-rule=\\"evenodd\\"/>",
            }
          }
          style={
            Object {
              "height": "1rem",
              "width": "1rem",
            }
          }
          viewBox="0 0 16 16"
        />
      </span>
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with defaultProps 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with label 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__hint-wrapper ax-space--x2"
  >
    <div
      className="ax-input__wrapper--label ax-text--size-body"
    >
      Lorem ipsum
    </div>
  </div>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with onClear and value 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <span
        className="ax-input__icon ax-input__icon--align-right"
      >
        <a
          className="ax-link ax-link--style-subtle"
          onClick={[Function]}
        >
          <svg
            className="ax-icon ax-icon--cross"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<g fill-rule=\\"nonzero\\" stroke=\\"currentColor\\" stroke-width=\\"2.1\\" fill=\\"none\\"><path d=\\"M3.75 12.25l8.5-8.5\\" class=\\"ax-animicon__path-1\\"/><path d=\\"M3.75 3.75l8.5 8.5\\" class=\\"ax-animicon__path-2\\"/></g>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </a>
      </span>
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value="Lorem"
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with size large 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--large"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with size medium 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--medium"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;

exports[`TextInput renders with size small 1`] = `
<label
  className="ax-input__wrapper ax-space--x4"
>
  <div
    className="ax-input__button-container"
  >
    <div
      className="ax-input__icon-container ax-input__icon-container--small"
    >
      <input
        className="ax-input"
        disabled={undefined}
        onBlur={[Function]}
        onFocus={[Function]}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</label>
`;
